--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Content Include="wwwroot\application\routes.js" />
+    <Content Include="wwwroot\application\views\login\login.cshtml" />
     <Content Include="wwwroot\css\theme.css" />
     <Content Include="wwwroot\Index.html" />
   </ItemGroup>
@@ -18,7 +19,6 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\application\controllers\" />
     <Folder Include="wwwroot\application\services\" />
-    <Folder Include="wwwroot\application\views\" />
   </ItemGroup>
 
 </Project>
