--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -8,11 +8,14 @@
   <ItemGroup>
     <Content Include="wwwroot\application\controllers\login-controller.js" />
     <Content Include="wwwroot\application\controllers\project-controller.js" />
+    <Content Include="wwwroot\application\controllers\user-controller.js" />
     <Content Include="wwwroot\application\routes.js" />
     <Content Include="wwwroot\application\services\AuthenticationService.js" />
     <Content Include="wwwroot\application\services\project-service.js" />
     <Content Include="wwwroot\application\services\UrlService.js" />
+    <Content Include="wwwroot\application\services\user-service.js" />
     <Content Include="wwwroot\application\views\project\list.html" />
+    <Content Include="wwwroot\application\views\user\list.html" />
     <Content Include="wwwroot\css\theme.css" />
     <Content Include="wwwroot\Index.html" />
   </ItemGroup>
