--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\application\controllers\assign-controller.js" />
+    <Content Include="wwwroot\application\controllers\delegate-controller.js" />
     <Content Include="wwwroot\application\controllers\login-controller.js" />
     <Content Include="wwwroot\application\controllers\project-controller.js" />
     <Content Include="wwwroot\application\controllers\user-controller.js" />
@@ -14,6 +16,8 @@
     <Content Include="wwwroot\application\services\project-service.js" />
     <Content Include="wwwroot\application\services\UrlService.js" />
     <Content Include="wwwroot\application\services\user-service.js" />
+    <Content Include="wwwroot\application\views\project\assign.html" />
+    <Content Include="wwwroot\application\views\project\delegate.html" />
     <Content Include="wwwroot\application\views\project\list.html" />
     <Content Include="wwwroot\application\views\user\list.html" />
     <Content Include="wwwroot\css\theme.css" />
