completed project details v1.0 and added hour type management

--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -6,16 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\application\controllers\create-hour-type-controller.js" />
     <Content Include="wwwroot\application\controllers\create-role-controller.js" />
     <Content Include="wwwroot\application\controllers\assign-controller.js" />
     <Content Include="wwwroot\application\controllers\delegate-controller.js" />
     <Content Include="wwwroot\application\controllers\developer-assignment-controller.js" />
+    <Content Include="wwwroot\application\controllers\hour-types-list-controller.js" />
     <Content Include="wwwroot\application\controllers\login-controller.js" />
     <Content Include="wwwroot\application\controllers\project-controller.js" />
     <Content Include="wwwroot\application\controllers\project-details-controller.js" />
+    <Content Include="wwwroot\application\controllers\remove-hour-type-modal-controller.js" />
     <Content Include="wwwroot\application\controllers\remove-role-dialog-controller.js" />
     <Content Include="wwwroot\application\controllers\remove-role-modal-controller.js" />
     <Content Include="wwwroot\application\controllers\role-list-controller.js" />
+    <Content Include="wwwroot\application\controllers\update-hour-type-controller.js" />
     <Content Include="wwwroot\application\controllers\update-role-controller.js" />
     <Content Include="wwwroot\application\controllers\user-controller.js" />
     <Content Include="wwwroot\application\directives\tree-detail-view\details-directive.js" />
@@ -25,12 +29,16 @@
     <Content Include="wwwroot\application\directives\tree-detail-view\tree.html" />
     <Content Include="wwwroot\application\routes.js" />
     <Content Include="wwwroot\application\services\AuthenticationService.js" />
+    <Content Include="wwwroot\application\services\hour-type-service.js" />
     <Content Include="wwwroot\application\services\project-service-tmp.js" />
     <Content Include="wwwroot\application\services\project-service.js" />
     <Content Include="wwwroot\application\services\role-service.js" />
     <Content Include="wwwroot\application\services\UrlService.js" />
     <Content Include="wwwroot\application\services\user-service.js" />
     <Content Include="wwwroot\application\views\assignments\single-developer.html" />
+    <Content Include="wwwroot\application\views\hour-type\hour-type-input.html" />
+    <Content Include="wwwroot\application\views\hour-type\list.html" />
+    <Content Include="wwwroot\application\views\hour-type\remove-modal.html" />
     <Content Include="wwwroot\application\views\project\assign.html" />
     <Content Include="wwwroot\application\views\project\delegate.html" />
     <Content Include="wwwroot\application\views\project\list.html" />
