fixing some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ InfoWeb.Presentation/wwwroot/lib
 .vs
 InfoWeb.DataAccess/appsettings.json
 InfoWeb.DistributedServices/appsettings.json
+InfoWeb.Presentation/appsettings.json
 
