--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -43,6 +43,12 @@
     <Content Include="wwwroot\application\controllers\update-role-controller.js" />
     <Content Include="wwwroot\application\controllers\update-user-controller.js" />
     <Content Include="wwwroot\application\controllers\user-controller.js" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type-directive.html" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type-row-directive.html" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type-row-directive.js" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type.html" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type-directive.js" />
+    <Content Include="wwwroot\application\directives\hour-type\hour-type.js" />
     <Content Include="wwwroot\application\directives\tree-detail-view\details-directive.js" />
     <Content Include="wwwroot\application\directives\tree-detail-view\details.html" />
     <Content Include="wwwroot\application\directives\tree-detail-view\tree-directive.js" />
