--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\lib\ng-toast\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InfoWeb.DataAccess\InfoWeb.DataAccess.csproj" />
