--- a/InfoWeb.Presentation/InfoWeb.Presentation.csproj
+++ b/InfoWeb.Presentation/InfoWeb.Presentation.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\application\controllers\assign-group-controller.js" />
     <Content Include="wwwroot\application\controllers\assignment-type-list-controller.js" />
     <Content Include="wwwroot\application\controllers\client-list-controller.js" />
     <Content Include="wwwroot\application\controllers\create-assignment-type-controller.js" />
@@ -69,6 +70,7 @@
     <Content Include="wwwroot\application\views\assignment-type\assignment-type-input.html" />
     <Content Include="wwwroot\application\views\assignment-type\list.html" />
     <Content Include="wwwroot\application\views\assignment-type\remove-modal.html" />
+    <Content Include="wwwroot\application\views\assignments\assign-group.html" />
     <Content Include="wwwroot\application\views\assignments\single-developer.html" />
     <Content Include="wwwroot\application\views\hour-type\hour-type-input.html" />
     <Content Include="wwwroot\application\views\hour-type\list.html" />
